--- a/src/components/middle/post.css
+++ b/src/components/middle/post.css
@@ -3,6 +3,8 @@
     position: relative;
     margin-top: 5px;
     width: 100%;
+    max-height: 75vh;
+    overflow-y: scroll;
     border-radius: 10px;
     padding: 20px;
     -webkit-box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
