--- a/src/components/leftside/navlinks.css
+++ b/src/components/leftside/navlinks.css
@@ -2,7 +2,7 @@
     text-align: center;
 }
 
-.nav-links a{
+.nav-links button{
     color: black;
     width: 170px;
     font-size: 110%;
@@ -11,9 +11,10 @@
     margin-bottom: 5px;
 }
 
-.nav-links a:hover{
+.nav-links button:hover{
     background-color: #ffc226 !important
 }
+
 
 .nav-links .deteleBtn, .nav-links .logoutBtn{
     text-align: center;
