--- a/src/components/middle/post.css
+++ b/src/components/middle/post.css
@@ -9,6 +9,7 @@
     padding: 20px;
     -webkit-box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
     box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
+    /* margin-bottom: 20px; */
 }
 
 .post-container{
@@ -20,6 +21,7 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
+    cursor: pointer;
 }
 
 .post .title {
