--- a/src/components/middle/shareBox.css
+++ b/src/components/middle/shareBox.css
@@ -3,7 +3,7 @@
     display: flex;
     align-items: flex-start;
     width: 100%;
-    height: 120px;
+    height: 180px;
     /* border: 1px solid #ffc226; */
     border-radius: 10px;
     padding: 20px;
@@ -11,7 +11,7 @@
     box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
 }
 
-.sharebox img {
+.sharebox img:not(.preview) {
     display: block;
     width: 50px;
     height: 50px;
@@ -19,7 +19,7 @@
     margin-right: 10px;
 }
 
-.sharebox form {
+.sharebox div {
     width: 100%;
     position: relative;
 }
@@ -29,6 +29,7 @@
     border: none;
     font-size: 18px;
     display: block;
+    /* margin-bottom: 30px; */
 }
 
 .sharebox input:focus {
@@ -36,10 +37,12 @@
 }
 
 .sharebox button {
+    cursor: pointer;
     position: absolute;
     display: flex;
     margin-top: 25px;
     right: 0px;
+    top: 60px;
     background-color: #ffc226;
     border-radius: 10px;
     border: none;
@@ -47,3 +50,23 @@
     padding: 8px;
     align-items: center;
 }
+
+.sharebox .cloudinary-button{
+    position: absolute;
+    width: 40px;
+    background-color: transparent;
+    text-align: center;
+    left: 0;
+    color: black;
+}
+
+.sharebox .preview{
+    display: block;
+    width: 100px;
+    max-height: 100px;
+    /* position: relative; */
+    margin-top: 30px;
+    /* margin-left: 50px; */
+    /* top:80px */
+}
+
