--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -7,6 +7,10 @@
     /* background-color: gray; */
     /* color: black; */
   }
+
+  body{
+    overflow-y: hidden;
+  }
   
   .Home{
     width: 90%;
@@ -29,7 +33,7 @@
     height: 100vh;
     padding: 20px 20px 0;
     overflow-y: scroll;
-    
+    /* margin-bottom: 10px; */
   }
   
   ::-webkit-scrollbar{
