--- a/src/components/middle/post.css
+++ b/src/components/middle/post.css
@@ -10,10 +10,13 @@
     -webkit-box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
     box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
     /* margin-bottom: 20px; */
+    /* border: 1px solid red; */
+    /* padding-bottom: 50px; */
 }
 
 .post-container{
     width: 100%;
+    
 }
 
 .post .avatar {
@@ -54,3 +57,4 @@
 .post .bottom .icon{
     cursor: pointer;
 }
+
