--- a/src/components/messager/messager.css
+++ b/src/components/messager/messager.css
@@ -54,16 +54,19 @@
  .inputs{
     width: 100%;
     height: 17vh;
+
     margin-top: 10px;
     /* border: 2px solid #1877f2; */
     -webkit-box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
     box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
     padding: 10px;
     border-radius: 10px;
+    overflow-y: scroll;
 }
 
  .inputs textarea{
     font-size: 18px;
+    height: 10vh;
     width: 100%;
     border: none;
     resize: none;
@@ -84,7 +87,6 @@
     /* color: #1877f2; */
     cursor: pointer;
     float: right;
-    
 }
 
  .inputs button:hover{
