--- a/src/components/register/register.css
+++ b/src/components/register/register.css
@@ -5,7 +5,7 @@
     border-radius: 20px;
     margin: 80px auto;
     padding: 20px;
-    position: relative;
+    /* position: relative; */
 }
 
 .register .long-img {
@@ -40,7 +40,7 @@
 }
 
 .register .login-button{
-    position: absolute;
-    right: 20px;
     text-transform: none;
+    float: right;
+    margin-top: -20px;
 }
