--- a/src/components/leftside/profile.css
+++ b/src/components/leftside/profile.css
@@ -1,7 +1,7 @@
 
 .profile{
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 0px;
 }
 
 .profile img {
@@ -11,4 +11,8 @@
     /* height: 80%; */
     border-radius: 100%;
     cursor: pointer;
+}
+
+.profile h3{
+    margin: 0;
 }
