--- a/src/components/register/register.css
+++ b/src/components/register/register.css
@@ -13,7 +13,8 @@
 }
 
 
-.register form {
+
+.register .form {
     width: 100%;
     padding-top: 50px;
     text-align: center;
@@ -43,4 +44,38 @@
     text-transform: none;
     float: right;
     margin-top: -20px;
+}
+
+.register .upload{
+    display: inline-block;
+    position: relative;
+    top: 10px;
+    vertical-align: middle;
+    height: 56px;
+    text-align: center;
+    padding: 5px 0;
+}
+
+.register .upload em{
+    font-size: 80%;
+    margin-left: 10px;
+}
+
+.register .upload button{
+    background-color: transparent;
+    color: black;
+    border: none;
+   
+
+}
+
+.register .upload-img{
+    border-radius: 20px;
+    width: 100px;
+    max-height: 100px;
+    object-fit: cover;
+    display: inline-block;
+    text-align: center;
+    margin: auto;
+    vertical-align: middle;
 }
