--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -12,6 +12,12 @@ body {
   overflow-y: hidden;
 }
 
+button:hover{
+  -webkit-box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
+    box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
+    background-color: #ffc226 !important;
+}
+
 .Home {
   width: 90%;
   margin: 0 auto;
