--- a/src/components/middle/shareBox.css
+++ b/src/components/middle/shareBox.css
@@ -44,11 +44,14 @@
     right: 0px;
     top: 60px;
     background-color: #ffc226;
+    /* background-color: transparent; */
     border-radius: 10px;
     border: none;
     font-size: 20px;
     padding: 8px;
     align-items: center;
+    -webkit-box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
+    box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
 }
 
 .sharebox .cloudinary-button{
